# mxl

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.devcontainer/: Dockerfile  Dockerfile.debianforky  Dockerfile.debiantrixie
.devcontainer/debianforky/: devcontainer.json
.github/workflows/: build.yml
GOVERNANCE/: DoD.md
docs/: Tools.md
examples/: Dockerfile.reader.txt  Dockerfile.writer.audio.loop.txt  Dockerfile.writer.txt  Dockerfile.writer.video.loop.txt  README.md  docker-compose.yaml
lib/: CMakeLists.txt
lib/fabrics/include/mxl/: fabrics.h  fabrics_ext.h
lib/fabrics/ofi/: CMakeLists.txt
lib/fabrics/ofi/src/: fabrics.cpp
lib/fabrics/ofi/src/internal/: Address.cpp  AddressVector.cpp  Completion.cpp  Completion.hpp  CompletionQueue.cpp  CompletionQueue.hpp  DataLayout.cpp  DataLayout.hpp  Domain.cpp  Domain.hpp  Endpoint.cpp  Endpoint.hpp  Event.cpp  Event.hpp  EventQueue.cpp  Exception.hpp  FILogging.cpp  FILogging.hpp  Fabric.cpp  Fabric.hpp  FabricInfo.cpp  FabricInfo.hpp  FabricInstance.cpp  FabricInstance.hpp  Format.hpp  GrainSlices.cpp  GrainSlices.hpp  ImmData.cpp  ImmData.hpp  Initiator.cpp  Initiator.hpp  LocalRegion.cpp  LocalRegion.hpp  MemoryRegion.cpp  MemoryRegion.hpp  PassiveEndpoint.cpp  PassiveEndpoint.hpp  Protocol.cpp  Protocol.hpp  ProtocolEgress.cpp  (+25 more)
lib/include/mxl/: flow.h
lib/internal/: CMakeLists.txt
lib/internal/include/mxl-internal/: ContinuousFlowReader.hpp  ContinuousFlowWriter.hpp  DiscreteFlowReader.hpp  DomainWatcher.hpp  FlowSynchronizationGroup.hpp  FlowWriter.hpp  IndexConversion.hpp  Instance.hpp
lib/internal/src/: DomainWatcher.cpp  FlowSynchronizationGroup.cpp  Instance.cpp  PosixContinuousFlowReader.cpp  PosixContinuousFlowReader.hpp  PosixContinuousFlowWriter.cpp  PosixContinuousFlowWriter.hpp  PosixDiscreteFlowReader.cpp  PosixDiscreteFlowReader.hpp  PosixDiscreteFlowWriter.cpp  PosixDiscreteFlowWriter.hpp
lib/internal/tests/: test_domainwatcher.cpp
lib/src/: flow.cpp  time.cpp
lib/tests/: CMakeLists.txt  test_pkgconfig_c_link.sh
lib/tests/fabrics/: CMakeLists.txt  test_basics.cpp
lib/tests/fabrics/ofi/: Util.hpp  test_Address.cpp  test_Domain.cpp  test_Provider.cpp  test_Region.cpp
rust/: Cargo.toml  deny.toml
rust/gst-mxl-rs/: Cargo.toml  README.md  build.rs
rust/gst-mxl-rs/src/: flowdef.rs  lib.rs
rust/gst-mxl-rs/src/mxlsink/: imp.rs  mod.rs  render_audio.rs  render_video.rs  sink_tests.rs  state.rs
rust/gst-mxl-rs/src/mxlsrc/: create_audio.rs  create_video.rs  imp.rs  mod.rs  mxl_helper.rs  src_tests.rs  state.rs
rust/gst-mxl-rs/version-helper/: Cargo.toml
rust/mxl/: Cargo.toml
rust/mxl/src/: flow.rs  lib.rs
rust/mxl/src/flow/: flowdef.rs
rust/mxl/src/grain/: data.rs  reader.rs
rust/version-helper/: Cargo.toml
tools/: CMakeLists.txt
tools/mxl-data-probe/: CMakeLists.txt  main.cpp
tools/mxl-data-reader/: CMakeLists.txt
tools/mxl-fabrics-demo/: CMakeLists.txt  demo.cpp
tools/mxl-gst/: CMakeLists.txt  looping_filesrc.cpp  sink.cpp  utils.hpp
tools/mxl-info/: CMakeLists.txt  main.cpp
