[package]
name = "gst-plugin-version-helper"
version = "0.8.1"
categories = ["development-tools"]
description = "build.rs helper function for GStreamer plugin metadata"
license = "Apache-2.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["gstreamer", "multimedia", "cargo"]
edition = "2021"
rust-version = "1.69"

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["std", "clock"] }
toml_edit = { version = "0.23", default-features = false, features = ["parse"] }
